Bug 158274 - Kgpg can't sign more than one file
Summary: Kgpg can't sign more than one file
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-02-23 16:34 UTC by Olivier Vitrat
Modified: 2008-03-03 09:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Vitrat 2008-02-23 16:34:36 UTC
Version:            (using KDE 3.5.8)
Installed from:    Debian testing/unstable Packages

This has been reported in Debian BTS at http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=464658

Multiple files can not be signed from the command line:

$ kgpg -e file1 file2 file3  (to encrypt) works great!

but

$ kgpg -S file1 file2 file3  (to sign) does not work.

I assume this is an oversight, as I can't imagine any reason to allow 
multiple encryption but prevent multiple signing.  I think both should 
be allowed.
Comment 1 Rolf Eike Beer 2008-02-24 16:19:03 UTC
The reason for this is gpg: there is no way to tell it to sign multiple files with detached signatures.

I'll implement this in trunk so it will be in KDE 4.1 and then see if I can backport it easily.
Comment 2 Rolf Eike Beer 2008-03-03 09:53:41 UTC
SVN commit 781561 by dakon:

Implement signing of multiple files from command line at once

BUG:158274

 M  +13 -4     gpgproc.cpp  
 M  +5 -0      gpgproc.h  
 M  +2 -1      kgpg.cpp  
 M  +1 -1      kgpgeditor.cpp  
 M  +60 -6     kgpgtextinterface.cpp  
 M  +11 -1     kgpgtextinterface.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=781561