Implement signing of multiple files from command line at once

BUG:158274

svn path=/trunk/KDE/kdeutils/kgpg/; revision=781561